# libgatt

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  mk.sh
lib/: uuid.c
src/: att.c  att.h  bluetooth.c  btio.c  btio.h  gatt.c  gatt.h  gattrib.c  gatttool.c  gatttool.h  log.c  test.c  utils.c
src/shared/: att.c  crypto.c
